--- a/KID/MainWindow.xaml
+++ b/KID/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="KID.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title=".KID - IDE для детей" Height="600" Width="1000">
+        Title=".KID - C#/.NET IDE для детей" Height="800" Width="1000">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -15,7 +15,7 @@
             <StackPanel Orientation="Horizontal">
                 <Menu>
                     <MenuItem Header="Файл">
-                        <MenuItem Header="Новый" />
+                        <MenuItem Header="Новый" Click="NewFileMenuItem_Click" />
                         <MenuItem Header="Открыть" />
                         <MenuItem Header="Сохранить" />
                     </MenuItem>
@@ -49,8 +49,7 @@
                      AcceptsReturn="True"
                      VerticalScrollBarVisibility="Auto"
                      HorizontalScrollBarVisibility="Auto"
-                     FontFamily="Consolas" FontSize="14"
-                     Text="System.Console.WriteLine(&quot;Hello World!&quot;);"/>
+                     FontFamily="Consolas" FontSize="14"/>
 
             <!-- Разделитель -->
             <GridSplitter Grid.Column="1" Width="5"
@@ -61,35 +60,34 @@
             <!-- Справа вывод -->
             <Grid Grid.Column="2" Margin="5">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="*" />
+                    <RowDefinition />
                     <!-- Консоль -->
                     <RowDefinition Height="5"/>
                     <!-- Разделитель -->
-                    <RowDefinition Height="2*" />
+                    <RowDefinition />
                     <!-- Графика -->
                 </Grid.RowDefinitions>
 
                 <!-- Консоль -->
                 <TextBox Grid.Row="0" Name="ConsoleOutput"
-         IsReadOnly="True"
-         VerticalScrollBarVisibility="Auto"
-         FontFamily="Consolas" FontSize="13"
-         Background="Black" Foreground="White"
-         Text="Console output..."/>
+                         IsReadOnly="True"
+                         VerticalScrollBarVisibility="Auto"
+                         FontFamily="Consolas" FontSize="13"
+                         Background="Black" Foreground="White"/>
 
                 <!-- Вертикальный разделитель -->
                 <GridSplitter Grid.Row="1"
-                  Height="5"
-                  HorizontalAlignment="Stretch"
-                  VerticalAlignment="Center"
-                  Background="Gray"/>
+                              Height="5"
+                              HorizontalAlignment="Stretch"
+                              VerticalAlignment="Center"
+                              Background="Gray"/>
 
                 <!-- Графика -->
                 <Canvas Grid.Row="2" Name="GraphicsCanvas"
-            Background="LightGray"
-            MinWidth="400" MinHeight="400"
-            HorizontalAlignment="Stretch"
-            VerticalAlignment="Stretch"/>
+                        Background="LightGray"
+                        MinWidth="400" MinHeight="400"
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Stretch"/>
             </Grid>
 
         </Grid>
