--- a/KID/MainWindow.xaml
+++ b/KID/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="KID.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title=".KID - C#/.NET IDE для детей" Height="800" Width="1000">
+        Title=".KID - C#/.NET IDE для детей" Height="600" Width="1000">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -16,8 +16,8 @@
                 <Menu>
                     <MenuItem Header="Файл">
                         <MenuItem Header="Новый" Click="NewFileMenuItem_Click" />
-                        <MenuItem Header="Открыть" Click="OpenFileMenuItem_Click"/>
-                        <MenuItem Header="Сохранить" Click="SaveFileMenuItem_Click"/>
+                        <MenuItem Header="Открыть" Click="OpenFileMenuItem_Click" />
+                        <MenuItem Header="Сохранить" Click="SaveFileMenuItem_Click" />
                     </MenuItem>
                     <MenuItem Header="Правка">
                         <MenuItem Header="Отменить" />
@@ -34,11 +34,11 @@
 
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="*" />
                 <!-- Редактор кода -->
-                <ColumnDefinition Width="5"/>
+                <ColumnDefinition Width="5" />
                 <!-- Разделитель -->
-                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="410" MinWidth="410" />
                 <!-- Вывод -->
             </Grid.ColumnDefinitions>
 
@@ -48,7 +48,7 @@
                      AcceptsReturn="True"
                      VerticalScrollBarVisibility="Auto"
                      HorizontalScrollBarVisibility="Auto"
-                     FontFamily="Consolas" FontSize="14"/>
+                     FontFamily="Consolas" FontSize="14" />
 
             <!-- Разделитель -->
             <GridSplitter Grid.Column="1" Width="5"
@@ -59,11 +59,11 @@
             <!-- Справа вывод -->
             <Grid Grid.Column="2" Margin="5">
                 <Grid.RowDefinitions>
-                    <RowDefinition />
+                    <RowDefinition Height="*" />
                     <!-- Консоль -->
-                    <RowDefinition Height="5"/>
+                    <RowDefinition Height="5" />
                     <!-- Разделитель -->
-                    <RowDefinition />
+                    <RowDefinition MinHeight="400" />
                     <!-- Графика -->
                 </Grid.RowDefinitions>
 
@@ -72,21 +72,19 @@
                          IsReadOnly="True"
                          VerticalScrollBarVisibility="Auto"
                          FontFamily="Consolas" FontSize="13"
-                         Background="Black" Foreground="White"/>
+                         Background="Black" Foreground="White" />
 
                 <!-- Вертикальный разделитель -->
                 <GridSplitter Grid.Row="1"
                               Height="5"
                               HorizontalAlignment="Stretch"
                               VerticalAlignment="Center"
-                              Background="Gray"/>
+                              Background="Gray" />
 
                 <!-- Графика -->
                 <Canvas Grid.Row="2" Name="GraphicsCanvas"
                         Background="LightGray"
-                        MinWidth="400" MinHeight="400"
-                        HorizontalAlignment="Stretch"
-                        VerticalAlignment="Stretch"/>
+                        Height="Auto" Width="Auto" />
             </Grid>
 
         </Grid>
