--- a/KID/App.xaml
+++ b/KID/App.xaml
@@ -1,9 +1,50 @@
 ﻿<Application x:Class="KID.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:KID"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+
+        <!-- Цвета -->
+        <Color x:Key="WindowBackground">#FF40568D</Color>
+        <Color x:Key="MenuBackground">#FFCCD5F0</Color>
+        <Color x:Key="SplitterColor">#FF5D6B99</Color>
+        <Color x:Key="EditorBackground">White</Color>
+        <Color x:Key="TextColor">Black</Color>
+        <Color x:Key="ConsoleBackground">#FF0972C5</Color>
+        <Color x:Key="ConsoleForeground">White</Color>
+        <Color x:Key="CanvasBackground">#d3d3d3</Color>
+
+        <!-- Кисти -->
+        <SolidColorBrush x:Key="WindowBrush" Color="{StaticResource WindowBackground}" />
+        <SolidColorBrush x:Key="MenuBrush" Color="{StaticResource MenuBackground}" />
+        <SolidColorBrush x:Key="SplitterBrush" Color="{StaticResource SplitterColor}" />
+        <SolidColorBrush x:Key="EditorBrush" Color="{StaticResource EditorBackground}" />
+        <SolidColorBrush x:Key="TextBrush" Color="{StaticResource TextColor}" />
+        <SolidColorBrush x:Key="ConsoleBrush" Color="{StaticResource ConsoleBackground}" />
+        <SolidColorBrush x:Key="ConsoleTextBrush" Color="{StaticResource ConsoleForeground}" />
+        <SolidColorBrush x:Key="CanvasBrush" Color="{StaticResource CanvasBackground}" />
+
+        <!-- Стили элементов -->
+        <Style TargetType="Window">
+            <Setter Property="Background" Value="{StaticResource WindowBrush}"/>
+        </Style>
+
+        <Style TargetType="Menu">
+            <Setter Property="Background" Value="{StaticResource MenuBrush}" />
+            <Setter Property="FontFamily" Value="Segoe UI"/>
+            <Setter Property="FontSize" Value="13"/>
+        </Style>
+
+        <Style TargetType="TextBox">
+            <Setter Property="FontFamily" Value="Consolas"/>
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="Foreground" Value="{StaticResource TextBrush}"/>
+            <Setter Property="Background" Value="{StaticResource EditorBrush}"/>
+        </Style>
+
+        <Style TargetType="GridSplitter">
+            <Setter Property="Background" Value="{StaticResource SplitterBrush}" />
+        </Style>
+
     </Application.Resources>
 </Application>
