--- a/KID/MainWindow.xaml
+++ b/KID/MainWindow.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="KID.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:avalonedit="http://icsharpcode.net/sharpdevelop/avalonedit"
         Title=".KID - C#/.NET IDE для детей" Height="600" Width="800"
         WindowStyle="None"
         AllowsTransparency="False" 
@@ -76,14 +77,13 @@
             </Grid.ColumnDefinitions>
 
             <!-- Код -->
-            <TextBox Grid.Column="0" Margin="5"
-                     Name="CodeEditor"
-                     AcceptsReturn="True"
-                     VerticalScrollBarVisibility="Auto"
-                     HorizontalScrollBarVisibility="Auto"
-                     Background="{StaticResource EditorBrush}"
-                     Foreground="{StaticResource TextBrush}"
-                     FontFamily="Consolas" FontSize="14" />
+            <avalonedit:TextEditor Grid.Column="0" Margin="5"
+                       Name="CodeEditor"
+                       FontFamily="Consolas"
+                       FontSize="14"
+                       ShowLineNumbers="True"
+                       Background="{StaticResource EditorBrush}"
+                       Foreground="{StaticResource TextBrush}" />
 
             <!-- Разделитель -->
             <GridSplitter Grid.Column="1" Width="5"
