--- a/KID/MainWindow.xaml
+++ b/KID/MainWindow.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:avalonedit="http://icsharpcode.net/sharpdevelop/avalonedit"
+        xmlns:views="clr-namespace:KID.Views"
         Title=".KID - C#/.NET IDE для детей" Height="600" Width="800"
         WindowStyle="None"
         AllowsTransparency="False" 
@@ -16,17 +17,15 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
+        <!-- Заголовок -->
         <Border Grid.Row="0"
                 Background="{StaticResource WindowBrush}"
                 Height="32">
             <DockPanel LastChildFill="True" MouseDown="TitleBar_MouseDown">
-
                 <Image Source="Resources/KID.ico"
                        Width="30" Height="30"
                        Margin="7.5,0,0,0"
                        VerticalAlignment="Center" />
-
-                <!-- Кнопки справа -->
                 <StackPanel Orientation="Horizontal"
                             DockPanel.Dock="Right"
                             VerticalAlignment="Center">
@@ -34,8 +33,6 @@
                     <Button Name="MaximizeButton" Style="{StaticResource WindowButtonStyle}" Click="Maximize_Click" Content="☐"/>
                     <Button Name="CloseButton" Style="{StaticResource WindowButtonStyle}" Click="Close_Click" Content="╳"/>
                 </StackPanel>
-
-                <!-- Заголовок -->
                 <TextBlock Text=".KID — C#/.NET IDE для детей"
                            DockPanel.Dock="Left"
                            Foreground="{StaticResource SpecialElementsBrush}"
@@ -47,26 +44,7 @@
         </Border>
 
         <!-- Меню -->
-        <Grid Grid.Row="1" Grid.ColumnSpan="2">
-            <StackPanel Orientation="Horizontal" Background="{StaticResource MenuBrush}">
-                <Menu Margin="0,0,0,10">
-                    <MenuItem Header="Файл">
-                        <MenuItem Header="Новый" Click="NewFileMenuItem_Click" />
-                        <MenuItem Header="Открыть" Click="OpenFileMenuItem_Click" />
-                        <MenuItem Header="Сохранить" Click="SaveFileMenuItem_Click" />
-                    </MenuItem>
-                    <MenuItem Header="Правка">
-                        <MenuItem Header="Отменить" Click="UndoMenuItem_Click" />
-                        <MenuItem Header="Повторить" Click="RedoMenuItem_Click" />
-                    </MenuItem>
-                    <MenuItem Header="Вид">
-                        <MenuItem Header="Тема" />
-                    </MenuItem>
-                    <MenuItem Header="▶️ Запустить" Click="RunButton_Click" />
-                    <MenuItem Header="■ Стоп" Click="StopButton_Click" IsEnabled="False" />
-                </Menu>
-            </StackPanel>
-        </Grid>
+        <views:MenuView x:Name="MenuView" Grid.Row="1" />
 
         <!-- Рабочая зона -->
         <Grid Grid.Row="2">
@@ -77,13 +55,7 @@
             </Grid.ColumnDefinitions>
 
             <!-- Код -->
-            <avalonedit:TextEditor Grid.Column="0" Margin="5"
-                       Name="CodeEditor"
-                       FontFamily="Consolas"
-                       FontSize="14"
-                       ShowLineNumbers="True"
-                       Background="{StaticResource EditorBrush}"
-                       Foreground="{StaticResource TextBrush}" />
+            <views:CodeEditorView x:Name="CodeEditorView" Grid.Column="0" Margin="5" />
 
             <!-- Разделитель -->
             <GridSplitter Grid.Column="1" Width="5"
@@ -100,12 +72,7 @@
                 </Grid.RowDefinitions>
 
                 <!-- Консоль -->
-                <TextBox Grid.Row="0" Name="ConsoleOutput"
-                         IsReadOnly="True"
-                         VerticalScrollBarVisibility="Auto"
-                         FontFamily="Consolas" FontSize="13"
-                         Background="{StaticResource ConsoleBrush}"
-                         Foreground="{StaticResource ConsoleTextBrush}" />
+                <views:ConsoleOutputView x:Name="ConsoleOutputView" Grid.Row="0" />
 
                 <!-- Вертикальный разделитель -->
                 <GridSplitter Grid.Row="1"
@@ -115,9 +82,7 @@
                               Background="{StaticResource SplitterBrush}" />
 
                 <!-- Графика -->
-                <Canvas Grid.Row="2" Name="GraphicsCanvas"
-                        Height="Auto" Width="Auto"
-                        Background="{StaticResource CanvasBrush}" />
+                <views:GraphicsOutputView x:Name="GraphicsOutputView" Grid.Row="2" />
             </Grid>
         </Grid>
     </Grid>
