--- a/KID/Views/MenuView.xaml
+++ b/KID/Views/MenuView.xaml
@@ -2,10 +2,12 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:viewModels="clr-namespace:KID.ViewModels"
+             xmlns:viewModelsInterfaces="clr-namespace:KID.ViewModels.Interfaces"
+             xmlns:di="clr-namespace:KID.Services.DI"
              Height="Auto" Width="Auto">
 
     <UserControl.DataContext>
-        <viewModels:MenuViewModel />
+        <di:ServiceProviderExtension ServiceType="{x:Type viewModelsInterfaces:IMenuViewModel}" />
     </UserControl.DataContext>
 
     <StackPanel Orientation="Horizontal" Background="{StaticResource MenuBrush}">
