--- a/KID/Views/ConsoleOutputView.xaml
+++ b/KID/Views/ConsoleOutputView.xaml
@@ -1,7 +1,13 @@
 <UserControl x:Class="KID.Views.ConsoleOutputView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:viewModelsInterfaces="clr-namespace:KID.ViewModels.Interfaces"
+             xmlns:di="clr-namespace:KID.Services.DI"
              Height="Auto" Width="Auto">
+
+    <UserControl.DataContext>
+        <di:ServiceProviderExtension ServiceType="{x:Type viewModelsInterfaces:IConsoleOutputViewModel}" />
+    </UserControl.DataContext>
 
     <TextBox Name="ConsoleOutputControl"
              IsReadOnly="True"
